<resources>
    <string name="app_name">DrawTeam</string>
    <string name="draw_team_menu_1">Início</string>
    <string name="draw_team_menu_2">Jogadores</string>
    <string name="draw_team_add_player">adicionar jogador</string>
    <string name="draw_team_is_goalkeeper">este jogador é goleiro?</string>
    <string name="draw_team_name">nome</string>
    <string name="draw_team_yes">sim</string>
    <string name="draw_team_no">não</string>
    <string name="draw_team_save">salvar</string>
    <string name="draw_team_draw">sortear time</string>
    <string name="draw_team_reset">redefinir</string>
    <string name="draw_team_ok">ok</string>
    <string name="draw_team_cancel">cancelar</string>
    <string name="draw_team_please_fill_name">por favor, preencha o nome do jogador</string>
    <string name="draw_team_so_sad">So sad :(</string>
    <string name="draw_team_pay_attention">pay _ attention ;/</string>
    <string name="draw_team_nothing_player">sem jogadores por aqui!</string>
    <string name="draw_team_add_error">desculpe, houve um problema ao tentar adicionar um novo jogador, por favor tente novamente mais tarde.</string>
    <string name="draw_team_delete_error">desculpe, houve um problema ao tentar deletar esse jogador, por favor tente novamente mais tarde.</string>
    <string name="draw_team_get_list_error">Ops, ocorreu um problema ao tentar carregar a listagem de jogadores, feche o app e abra novamente, por favor.</string>
    <string name="draw_team_select_timer">selecionar o tempo da partida</string>
    <string name="draw_team_empty_players">que pena, acabei de perceber que você ainda não adicionou nenhum jogador, vamos fazer o seguinte, primeira vai na aba de jogadores e adiciona os jogadores que você deseja sortear, depois volta aqui, que tal ?</string>
    <string name="draw_team_team_count">Time %s</string>
    <string name="draw_team_players_count">Jogadores selecionados %d</string>
    <string name="draw_team_search_by_name">pesquisar por nome</string>
    <string name="draw_team_start">inicar</string>
    <string name="draw_team_settings">configrações</string>
    <string name="draw_team_fuck_off">Por favor, verifique a quantidade de times e jogadores nas configurações e veja se há jogadores suficientes para quantidade de times.</string>
    <string name="draw_team_unselected_players">Nenhum jogador foi selecionado para o sorteio.</string>
    <string name="draw_team_reset_seconds">00:00</string>
    <string name="draw_team_minutes">minutos</string>
    <string name="draw_team_want_to_delete_player">você deseja excluir esse jogador ?</string>
    <string name="draw_team_what_shame">que pena ;(</string>
    <string name="draw_team_unexpected_problem">ocorreu um problema inesperado ao tentar apresentar os times sorteados na tela, por favor, tente novamente.</string>
    <string name="draw_team_draw_error">um problema foi encontrado ao realizar o sorteio dos times, por favor, feche a janela de seleção de jogadores e tente novamente.</string>
    <string name="draw_team_this_is_boring">isso é bem chato, eu sei!</string>
    <string name="draw_team_error_get_players">houve uma intermitência ao tentar buscar pelos jogadores na base de dados, por favor, tente novamente.</string>
    <string name="draw_team_error_search_players">houve um erro ao tentar realizar a busca dos jogadores, me desculpe, tente novamente, por favor.</string>
    <string name="draw_team_back">voltar</string>
    <string name="draw_team_not_found_players">Nenhum jogador foi encontrado por este nome.</string>
    <string name="draw_team_players">jogadores</string>
    <string name="draw_team_teams">times</string>
    <string name="draw_team_settings_team">configurações do time</string>
</resources>