<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/id_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_team_add_player"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_dialog_txt_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/DrawTeamTextInputLayout"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_dialog_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_dialog_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/draw_team_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_dialog_is_goalkeeper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp"
        android:text="@string/draw_team_is_goalkeeper"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_dialog_txt_input_name" />

    <RadioGroup
        android:id="@+id/id_dialog_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintTop_toBottomOf="@id/id_dialog_is_goalkeeper">

        <RadioButton
            android:id="@+id/id_radio_button_no_goalkeeper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/draw_team_no" />

        <RadioButton
            android:id="@+id/id_radio_button_goalkeeper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/draw_team_yes" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>