<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DrawTeamBottomSheetDialogTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <View
            android:id="@+id/id_dialog_setting_view_top"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:theme="@style/DrawTeamBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_dialog_setting_txt_setting_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/draw_team_settings_team"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_dialog_setting_view_top" />

        <TextView
            android:id="@+id/id_dialog_setting_number_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_team_teams"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/id_dialog_setting_number_picker_team"
            app:layout_constraintStart_toEndOf="@id/id_dialog_setting_number_picker_team"
            app:layout_constraintTop_toTopOf="@id/id_dialog_setting_number_picker_team" />

        <NumberPicker
            android:id="@+id/id_dialog_setting_number_picker_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:showDividers="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_dialog_setting_txt_setting_team" />

        <TextView
            android:id="@+id/id_dialog_setting_number_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_team_players"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/id_dialog_setting_number_picker_players"
            app:layout_constraintEnd_toStartOf="@id/id_dialog_setting_number_picker_players"
            app:layout_constraintTop_toTopOf="@id/id_dialog_setting_number_picker_players" />

        <NumberPicker
            android:id="@+id/id_dialog_setting_number_picker_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:showDividers="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_dialog_setting_txt_setting_team" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/id_dialog_setting_btn_save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/draw_team_configure"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/id_dialog_setting_btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/id_dialog_setting_number_picker_players" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/id_dialog_setting_btn_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/draw_team_cancel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/id_dialog_setting_btn_save"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>